--- a/DS4Windows.UI/Control/CustomStyleEx/RichTextBoxEx/cRichTextBox_style.xaml
+++ b/DS4Windows.UI/Control/CustomStyleEx/RichTextBoxEx/cRichTextBox_style.xaml
@@ -83,7 +83,15 @@
                 </Style>
             </ResourceDictionary>
         </Style.Resources>
-        
+        <Setter Property="ContextMenu">
+            <Setter.Value>
+                <ContextMenu>
+                    <MenuItem Header="Cut" Command="ApplicationCommands.Cut"/>
+                    <MenuItem Header="Copy" Command="ApplicationCommands.Copy"/>
+                    <MenuItem Header="Paste" Command="ApplicationCommands.Paste"/>
+                </ContextMenu>
+            </Setter.Value>
+        </Setter>
         <Setter Property="MinWidth" Value="10"/>
         <Setter Property="Background" Value="{StaticResource BackgroundColor}" />
         <Setter Property="Foreground" Value="{StaticResource ForegroundColor}" />
