--- a/DS4Windows.UI/Control/CustomStyleEx/TextBoxEx/cTextBox_style.xaml
+++ b/DS4Windows.UI/Control/CustomStyleEx/TextBoxEx/cTextBox_style.xaml
@@ -8,6 +8,15 @@
     <SolidColorBrush x:Key="SecondaryColor" Color="Cyan" />
 
     <Style x:Key="cTextBoxStyle" TargetType="{x:Type TextBox}">
+        <Setter Property="ContextMenu">
+            <Setter.Value>
+                <ContextMenu>
+                    <MenuItem Header="Cut" Command="ApplicationCommands.Cut"/>
+                    <MenuItem Header="Copy" Command="ApplicationCommands.Copy"/>
+                    <MenuItem Header="Paste" Command="ApplicationCommands.Paste"/>
+                </ContextMenu>
+            </Setter.Value>
+        </Setter>
         <Setter Property="Background" Value="{StaticResource BackgroundColor}" />
         <Setter Property="Foreground" Value="{StaticResource ForegroundColor}" />
         <Setter Property="BorderBrush" Value="{StaticResource BorderColor}" />
